courses/430_programming-languages/assignment-6/tests/error/hw4_error17.correct
conditional expression requires matching types, found 'bool' and 'string'
